# upkeep-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  justfile
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
scripts/: coverage.sh  install.sh
skills/upkeep-audit/: SKILL.md
skills/upkeep-deps/: SKILL.md
skills/upkeep-quality/: SKILL.md
skills/upkeep-rs-audit/: SKILL.md
skills/upkeep-rs-deps/: SKILL.md
skills/upkeep-rs-quality/: SKILL.md
src/: main.rs
src/cli/: mod.rs
src/cli/commands/: audit.rs  deps.rs  detect.rs  mod.rs  quality.rs  run_with.rs  tree.rs  unsafe_code.rs  unused.rs
src/core/: error.rs  mod.rs  output.rs
src/core/analyzers/: audit.rs  clippy.rs  crates_io.rs  external_tool.rs  mod.rs  unsafe_code.rs  unused.rs  util.rs
src/core/scorers/: mod.rs  quality.rs
tests/: cli.rs  detect.rs  tree.rs
