[package]
name = "cargo-upkeep"
version = "0.1.5"
edition = "2021"
description = "Unified Rust project maintenance CLI (cargo subcommand)"
repository = "https://github.com/llbbl/upkeep-rs"
homepage = "https://github.com/llbbl/upkeep-rs"
documentation = "https://docs.rs/cargo-upkeep"
keywords = ["cargo", "cargo-subcommand", "dependencies", "security", "maintenance"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]
readme = "README.md"
license = "MIT"
rust-version = "1.70"

[[bin]]
name = "cargo-upkeep"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
cargo_metadata = "0.23"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rustsec = "0.32"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0"
httpmock = "0.8"
predicates = "3.0"
tempfile = "3.0"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/cargo-upkeep-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "."

[[package.metadata.binstall.overrides]]
target = "x86_64-pc-windows-msvc"
pkg-url = "{ repo }/releases/download/v{ version }/cargo-upkeep-{ target }.zip"
pkg-fmt = "zip"
bin-dir = "."
